== In Git

=== Bugfixes
* lib/cucumber/formatter/html.rb requires ruby-debug (#455 Assaf Arkin)

== 0.3.103 2009-09-24

This release gives you back some of the control over the Rails environment that was accidentally taken away from you in the 
previous release.

Using this release on a Rails project requires a rerun of script/generate cucumber.

=== New Features
* Added a new @no-txn tag to selectively turn off transactions for a particlular scenario.
* Added back a way to globally turn off transactions.
* Renamed @allow_rescue tag to @allow-rescue.

=== Bugfixes
* Gracefully handle cases when optional regexp groups are not matched. Ex: /should( not)? be flashed '([^']*?)'$/ (Aslak Hellesøy)

=== Changed Features
* The Formatter API has completely changed. Formatters are no longer a double-dispacth visitor - just a single-dispatch listener (#438 Matt Wynne)

== 0.3.102 2009-09-22

This release has some changes in the Rails support, so make sure you run "script/generate cucumber" after you upgrade.
Other noteworthy new features are improved Hook, tags and Transform support, and as always - several smaler bug fixes.

=== New Features
* Added new internal API for Regexp and groups, allowing other programming languages to leverage native regexps. (Aslak Hellesøy)
* New @allow_rescue tag for Rails scenarios. Causes exceptions raised in actions to be caught by rails and not bubble up to Cucumber (Aslak Hellesøy)
* Negative tags can now be used in hooks, just like the command line's --tags option: Before('~@yarr') - will run for all scenarios that *don't* have the @yarr tag. (Aslak Hellesøy)
* Transform has current "World" scope (Larry Diehl)
* Other Transforms can be reused by calling Transform with a string inside of another Transform definition (Larry Diehl)
* Execute "After" hooks in reverse order of declaration for better behavior with dependent blocks and to mimic the behavior of at_exit (David Waite)

=== Bugfixes